slider fixed partially and horizontal scroll resolved

--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,7 @@
 * {
   box-sizing: border-box;
+  min-height: 0;
+  min-width: 0;
 }
 
 body, html {
